criar método de listagem de missões com paginação e filtros